--- a/src/HeroLoginPage.module.scss
+++ b/src/HeroLoginPage.module.scss
@@ -7,10 +7,10 @@
   }
   .heroLeft {
     width: 100vw !important;
-    height: 50vh !important;
+    height: 30vh !important;
     min-height: 0 !important;
     max-height: none !important;
-    flex-basis: 50vh !important;
+    flex-basis: 30vh !important;
   }
   .coffeeTableImg {
     width: 100vw !important;
@@ -21,13 +21,15 @@
   /* Right side (login) */
   .heroLoginPage > div:not(.heroLeft) {
     width: 100vw !important;
-    height: 50vh !important;
+    height: 70vh !important;
     min-height: 0 !important;
-    flex-basis: 50vh !important;
+    flex-basis: 70vh !important;
     display: flex !important;
     align-items: center !important;
     justify-content: center !important;
     background: #fff !important;
+    overflow-y: auto !important;
+  padding-bottom: 1.5em !important;
   }
 }
 
